sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:7: error: Int(1) does not take parameters
  {parcours = false
  ^