sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {
  var taille = getNombreValeurs();
  var parcours = true;
  while (parcours)
  taille = taille - 1
  {parcours = false
    for(j<-1 to taille - 1)
    {
      
      if (getValeur(j)<getValeur(j-1))
          {
            echange(j,j-1)
            parcours = true
          }
    }
  }
}
